hphp/test/zend/bad/errmsg_014.php
<?php

class test {
	function __clone() {
	}
}

$t = new test;
$t->__clone();

echo "Done\n";
?>